// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Select
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Select
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR bg-theme-success-50 dark:bg-theme-success-900"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT bg-theme-success-50 dark:bg-theme-success-900"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB bg-theme-success-50 dark:bg-theme-success-900"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              color="success"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Selected
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR bg-theme-primary-50 dark:bg-theme-primary-900"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT bg-theme-primary-50 dark:bg-theme-primary-900"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB bg-theme-primary-50 dark:bg-theme-primary-900"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Current
              </div>
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                />
              </div>
            </div>
            <span>
              genesis_42
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              color="primary"
              data-testid="DelegateRow__toggle-1"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Select
              </div>
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 font-bold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ktCSBk"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                />
              </div>
            </div>
            <span>
              genesis_17
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
          >
            <span>
              <button
                class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                color="primary"
                data-testid="DelegateRow__toggle-2"
                disabled=""
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
